--- a/acton-htmx/Cargo.toml
+++ b/acton-htmx/Cargo.toml
@@ -40,6 +40,7 @@ serde.workspace = true
 serde_json.workspace = true
 toml.workspace = true
 thiserror.workspace = true
+anyhow.workspace = true
 async-trait.workspace = true
 http.workspace = true
 hyper.workspace = true
