feat(security,validation): implement security headers and input validation
Week 10 Implementation:

Security Headers:
- Add SecurityHeadersConfig with strict/development/custom presets
- Implement SecurityHeadersMiddleware for automatic header injection
- Support X-Frame-Options, X-Content-Type-Options, X-XSS-Protection
- Support Strict-Transport-Security (HSTS) with full configuration
- Support Content-Security-Policy and Referrer-Policy
- Add 8 comprehensive tests for all configuration options

Input Validation:
- Add ValidatedForm extractor with validator crate integration
- Implement ValidationError with proper HTTP status codes
- Add validation helper functions (format_validation_errors, validation_errors_json)
- Add 5 comprehensive tests for form validation

Template Validation Helpers:
- Add validation_errors_for() for field-specific error rendering
- Add has_error() for conditional error styling
- Add error_class() for CSS class application
- Add validation_errors_list() for full error list display
- Add 6 comprehensive tests for template helpers

Dependencies:
- Add validator = "0.20" with derive feature

Test Coverage:
- 167 unit tests passing (up from 148)
- 58 doctests passing (all documentation examples)
- Zero test failures
- New tests cover security headers, validation, and error rendering

Breaking Changes: None

--- a/acton-htmx/Cargo.toml
+++ b/acton-htmx/Cargo.toml
@@ -34,7 +34,7 @@ acton-reactive.workspace = true
 tokio.workspace = true
 axum-htmx.workspace = true
 askama.workspace = true
-validator.workspace = true
+validator = { workspace = true, features = ["derive"] }
 argon2.workspace = true
 rand.workspace = true
 sha2.workspace = true
